# sCiMapLab

./: LICENSE  README.md  pyproject.toml  setup.py
scimaplab/: cmap_scheme.py  generate_cmaps.py
