[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scimaplab"
version = "0.1"
description = "sCiMapLab provides handy functions for generating Matplotlib style colormaps for scientific data."
readme = "README.md"
authors = [
    { name = "Francesco Alberti", email = "fnc.alberti@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/alberti-f/sCiMapLab"
